--- a/app/views/devise/registrations/_basic_form.html.erb
+++ b/app/views/devise/registrations/_basic_form.html.erb
@@ -1,6 +1,8 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {id: 'basic_form'}) do |f| %>
   <%= devise_error_messages! %>
-
+  
+  <%= hidden_field_tag 'plan', params[:plan] %>
+  
   <div class="field form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, class: 'form-control'%>
@@ -23,7 +25,4 @@
     <%= f.submit "Sign up", class: 'btn btn-success'%>
   </div>
   
-  <% if params[:plan] == '2' %>
-  <%=  %>
-  <% end %>
 <% end %>
