--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
  <!--current_user is a helper from the devise gem to insert the current users id as a parameter -->
 <%= link_to "Create your profile!", new_user_profile_path(current_user) if current_user %>
-<div><%= p "Hello #{current_user.id}" %></div>
+<div><%= p "Hello #{current_user.id}" if current_user %></div>
 <div class="jumbotron text-center">
   <h1>Welcome to DevMatch</h1>
   <h3>Where entrepreneurs can meet developers.</h3>
