--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,11 @@
-<%= @user %>
+<%= @user.profile.first_name %> 
+<%= @user.profile.last_name %> <br/>
+<%= @user.profile.job_title %> <br/>
+<%= @user.profile.description %> <br/>
+
+<% if current_user.plan_id == 2 %>
+    <%= @user.profile.phone_number %> <br/>
+    <%= @user.profile.contact_email %> <br/>
+<% else %>
+    <div class='danger'>Upgrade to the pro account to see user details!</div>
+<% end%>
