--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,20 +5,27 @@
   <h1>Welcome to DevMatch</h1>
   <h3>Where entrepreneurs can meet developers.</h3>
 </div>
-<div class="row">
-  <div class="col-md-6">
-    <div class="well">
-      <h2 class="text-center">Basic Membership</h2>
-      <h4>Sign up for free and get basic access to our community.</h4>
-      <br>
-      <%= link_to "Sign Up For Free", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+
+<% if current_user %>
+
+<% else %>
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Basic Membership</h2>
+        <h4>Sign up for free and get basic access to our community.</h4>
+        <br>
+        <%= link_to "Sign Up For Free", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Pro Membership</h2>
+        <h4>Sign up for the pro account for $10/month and get access to the community and contact information.</h4>
+        <%= link_to "Sign Up For Pro Account", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+      </div>
     </div>
   </div>
-  <div class="col-md-6">
-    <div class="well">
-      <h2 class="text-center">Pro Membership</h2>
-      <h4>Sign up for the pro account for $10/month and get access to the community and contact information.</h4>
-      <%= link_to "Sign Up For Pro Account", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
-    </div>
-  </div>
-</div>
+  
+<% end %>
