--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,31 +1,50 @@
  <!--current_user is a helper from the devise gem to insert the current users id as a parameter -->
-<%= link_to "Create your profile!", new_user_profile_path(current_user) if current_user %>
-<div><%= p "Hello #{current_user.id}" if current_user %></div>
+
 <div class="jumbotron text-center">
   <h1>Welcome to DevMatch</h1>
   <h3>Where entrepreneurs can meet developers.</h3>
 </div>
 
-<% if current_user %>
 
-<% else %>
 
   <div class="row">
-    <div class="col-md-6">
-      <div class="well">
-        <h2 class="text-center">Basic Membership</h2>
-        <h4>Sign up for free and get basic access to our community.</h4>
-        <br>
-        <%= link_to "Sign Up For Free", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+    <!--instead of using current_user, could also use user_signed_in?-->
+    <% if current_user %>
+      <div class="col-md-6">
+        <div class="well">
+          <h2 class="text-center">User Dashboard</h2>
+          <% if current_user.profile %>
+            <%= link_to "View your profile", user_path(current_user), class: 'btn btn-primary btn-block btn-lg' %><br/>
+            <%= link_to "Edit your profile", edit_user_profile_path(current_user), class: 'btn btn-primary btn-block btn-lg' %>
+          <% else %>
+            <%= link_to "Create your profile", new_user_profile_path(current_user), class: 'btn btn-primary btn-block btn-lg' %>
+          <% end %>
+        </div>
       </div>
-    </div>
-    <div class="col-md-6">
-      <div class="well">
-        <h2 class="text-center">Pro Membership</h2>
-        <h4>Sign up for the pro account for $10/month and get access to the community and contact information.</h4>
-        <%= link_to "Sign Up For Pro Account", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+      <div class="col-md-6">
+        <div class="well">
+          <p>Visit the community to meet others to collaborate with.</p>
+          <h2 class="text-center">The Community</h2>
+          <%= link_to "View Users",  users_path, class: 'btn btn-danger btn-block btn-lg' %>
+        </div>
       </div>
-    </div>
+    <% else %>
+      <div class="col-md-6">
+        <div class="well">
+          <h2 class="text-center">Basic Membership</h2>
+          <h4>Sign up for free and get basic access to our community.</h4>
+          <br>
+          <%= link_to "Sign Up For Free", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="well">
+          <h2 class="text-center">Pro Membership</h2>
+          <h4>Sign up for the pro account for $10/month and get access to the community and contact information.</h4>
+          <%= link_to "Sign Up For Pro Account", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+        </div>
+      </div>
+    <% end %>
   </div>
   
-<% end %>
+
