--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,13 @@
-<%= @user.profile.first_name %> 
+<h2>Profile Information</h2>
+
+<%= "First Name" @user.profile.first_name %> <br/>
 <%= @user.profile.last_name %> <br/>
 <%= @user.profile.job_title %> <br/>
 <%= @user.profile.description %> <br/>
 
 <% if current_user.plan_id == 2 %>
     <%= @user.profile.phone_number %> <br/>
-    <%= @user.profile.contact_email %> <br/>
+    <%= @user.profile.contact_email %> <br/></br>
 <% else %>
     <div class='danger'>Upgrade to the pro account to see user details!</div>
 <% end%>
