Added file fields for image uploads on profiles

--- a/app/views/profiles/_profile_form.html.erb
+++ b/app/views/profiles/_profile_form.html.erb
@@ -1,7 +1,7 @@
  <div class="field form-group">
   <!-- form_for creates new profile object for user. url: user_profile_path tells the form to send to the create action for this user in rake routes-->
    <!--If users could have more than one profile, we wouldn't need to include url: user_profile_path, but since the profile is singular, we do-->
-    <%= form_for @profile, url: user_profile_path do |f| %>
+    <%= form_for @profile, url: user_profile_path, html: { multipart: true } do |f| %>
       <div class="form-group">
         <%= f.label :first_name %>
         <%= f.text_field :first_name, class: 'form-control' %>
@@ -11,6 +11,11 @@
         <%= f.label :last_name %>
         <%= f.text_field :last_name, class: 'form-control' %>
       </div>
+      
+      <div class="form-group">
+        <%= f.label :avatar %>
+        <%= f.file_field :avatar %>
+      </div><br/>
       
       <div class="form-group">
         <%= f.label :job_title %>
