--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
 
 <%= @user.profile.first_name %> <br/>
 <%= @user.profile.last_name %> <br/>
+<%= image_tag @user.profile.avatar.url %>
 <%= @user.profile.job_title %> <br/>
 <%= @user.profile.description %> <br/>
 
