--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,3 +40,26 @@
     -moz-border-right-colors: none;
     -moz-border-top-colors: none;
 }
+
+.job_title_icon {
+    font-size: 32px;
+    color: white;
+    background: #337ab7;
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.profile_description {
+    width: 300px;
+}
+
+.avatar-show {
+    
+    border-radius: 50%;
+    -webkit-box-shadow: 3px 3px 11px 6px rgba(15,14,15,1);
+    -moz-box-shadow: 3px 3px 11px 6px rgba(15,14,15,1);
+    box-shadow: 3px 3px 11px 6px rgba(15,14,15,1);
+    
+}
