--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,6 +16,9 @@
                 </div>
                 <div class="col-sm-8">
                   <h2><%= user.profile.first_name %> <%= user.profile.last_name %></h2>
+                  <% if user.plan_id == 2 %>
+                    <span class="label label-danger">Pro User</span>
+                  <% end %>
                 </div>
             </div>
           <% end %>
