--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,5 @@
 <div class="row col-md-4 col-md-offset-4">
+  <h1 class="text-center">Contact Us</h1>
   <div class="well">
     <%= form_for @contact do |f| %>
       <div class="form-group">
@@ -13,7 +14,7 @@
         <%= f.label :comments %>
         <%= f.text_area :comments, class: 'form-control' %>
       </div>
-      <%= f.submit 'Send', class: 'btn btn-default' %>
+      <%= f.submit 'Send', class: 'btn btn-primary' %>
     <% end %>
   </div>
 </div>
